@@ -1,7 +1,7 @@
 AUX sagan.confd 271 RMD160 e6b80458e7f6d47c3635a960633b85ead1d4cc18 SHA1 d16a1dd18eb481745f63e712edcc07919c44da20 SHA256 5ebb28b91dc3c1ee611f7f28c0e5b19cd4848af1c479d7dac2a468284b3258f2
 AUX sagan.init 359 RMD160 7a40fddaddfdf0f37a159e3fe19596cc97620002 SHA1 cda3294ad43848fd0e41aa68730b09b4d6c9e0a2 SHA256 2f62664907dbe7f1fb0640c2e17f1e8bf216c1dc9bd7d9bd921573b997c7daad
 DIST sagan-0.1.7.tar.gz 172332 RMD160 1eb2010a562a8de425646c73ad2ca678adf97cb7 SHA1 ed50082f1cb7749e1a1bb23f12b2e4b6a76a656a SHA256 49dc33ae92576f8525b4b680610702a142be1b2b3b9d4660db4ff30168e3db61
-EBUILD sagan-0.1.7.ebuild 1756 RMD160 44e73727816231d3564d54ca8ccb83e7c2c1c329 SHA1 5af8342236bccb879fb4ab109ae424ea034d8ef3 SHA256 80dcb9c055fff7d44f99be474843b066dec3a84ba8ee94d3a0a7be142daba040
+EBUILD sagan-0.1.7-r1.ebuild 1961 RMD160 ec3f47c2c3d5debac30fb4a2cbf670c50d639395 SHA1 860808470149cb60698089ab3640e54682923341 SHA256 f8a6a598aaef13dff97d0afe68ba2cbccb7ea4002084af5fa0bab4cd6fb0eb6e
 EBUILD sagan-9999.ebuild 2158 RMD160 3e128b0763f467f068e8073f6d3ea9cc46639d20 SHA1 f36f0ec41f1d1ad317e255d68147c57ae701fff7 SHA256 ab09e5f08c17270a5a1bbe39417d1136e914bb534572606b29552c7af588f074
-MISC ChangeLog 1529 RMD160 dfecd0ebb4506216db3a512b88db15d72d354517 SHA1 c2cb3a2ac7c8b92e319ca5eb65d443cc74178e27 SHA256 31f2e75737019e7fc567fde88cd4dc52d40bf79fa04f75eba150f2de5805305c
+MISC ChangeLog 1698 RMD160 09620fad67d78b276c7521fc069b4461ee1a8275 SHA1 7f3fe004726ad56c329655e159d04bd60f16910e SHA256 47ae18969d772a717a7fef9f14bf006a9f75d77b6adb9ac7caac777fb6896648
 MISC metadata.xml 614 RMD160 9a2fbb289ba044663b3122a03095136ea234b2ac SHA1 b615cea2ce4469d0f5b61f84631165469cf5bf01 SHA256 baf7201c68bd3a1e15e9e28997bacaa1f34bf6cc6585828687d66064ae5f3e4e
