@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sagan-0.1.7-r1 (24 Jan 2011)
+
+  24 Jan 2011; A. Vinogradov <spamslepnoga@inbox.ru> -sagan-0.1.7.ebuild,
+  +sagan-0.1.7-r1.ebuild:
+  backport more fix from live ebuild
+
   23 Jan 2011; <slep@gentoo.org> -sagan-0.1.6.ebuild:
   drop old sagan ebuild
 
